--- a/README.textile
+++ b/README.textile
@@ -91,7 +91,7 @@ In addition to the tags detailed in the following sections, every tag accepts a 
 * @title="value"@<br />Usually used for hover tooltip describing the input control's use in your application.
 * @translate="boolean"@<br />Whether to subject the attribute content to language translation.
 
-h3. zem_contact
+h3. zem_contact tag
 
 bc. <txp:zem_contact />
 
@@ -155,7 +155,7 @@ Email received.
 
 ============
 
-h3. zem_contact_text
+h3. zem_contact_text tag
 
 bc. <txp:zem_contact_text />
 
@@ -222,7 +222,7 @@ Create a telephone field with a "validation pattern for UK telephone number":htt
 
 bc. <txp:zem_contact_text type="tel" label="Telephone" pattern="^\s*\(?(020[7,8]{1}\)?[ ]?[1-9]{1}[0-9{2}[ ]?[0-9]{4})|(0[1-8]{1}[0-9]{3}\)?[ ]?[1-9]{1}[0-9]{2}[ ]?[0-9]{3})\s*$" required="1" />
 
-h3. zem_contact_email
+h3. zem_contact_email tag
 
 bc. <txp:zem_contact_email />
 
@@ -253,7 +253,7 @@ h5. Example 1
 
 bc. <txp:zem_contact_email label="Your email address" />
 
-h3. zem_contact_textarea
+h3. zem_contact_textarea tag
 
 bc. <txp:zem_contact_textarea />
 
@@ -285,7 +285,7 @@ Create a text area that is 40 characters wide, 10 lines high, with a customised 
 
 bc. <txp:zem_contact_textarea cols="40" rows="10" label="Your question" />
 
-h3. zem_contact_submit
+h3. zem_contact_submit tag
 
 bc. <txp:zem_contact_submit />
 
@@ -325,7 +325,7 @@ bc. <txp:zem_contact_submit>
     <img src="path/to/img.png" alt="submit">
 </txp:zem_contact_submit>
 
-h3. zem_contact_select
+h3. zem_contact_select tag
 
 bc. <txp:zem_contact_select />
 
@@ -364,7 +364,7 @@ bc. <txp:zem_contact_select label="Department" selected="Sales">
 
 Drop-down selection list containing three options plus a blank option (also see @zem_contact_option@ tag below), with 'Sales' selected by default.
 
-h3. zem_contact_option
+h3. zem_contact_option tag
 
 bc. <txp:zem_contact_option />
 
@@ -397,7 +397,7 @@ bc. <txp:zem_contact_select label="Department">
 
 Drop-down selection list containing three options as container tags with 'Sales' selected by default.
 
-h3. zem_contact_checkbox
+h3. zem_contact_checkbox tag
 
 bc. <txp:zem_contact_checkbox />
 
@@ -431,7 +431,7 @@ bc. With which operating systems are you familiar?<br />
 <txp:zem_contact_checkbox label="Unix/Linux/BSD" required="0" /><br />
 <txp:zem_contact_checkbox label="MacOS" required="0" />
 
-h3. zem_contact_radio
+h3. zem_contact_radio tag
 
 bc. <txp:zem_contact_radio />
 
@@ -462,7 +462,7 @@ bc. <txp:zem_contact_radio label="Medium" group="I like my steak" />
 <txp:zem_contact_radio label="Beer" />
 <txp:zem_contact_radio label="Water" />
 
-h3. zem_contact_secret
+h3. zem_contact_secret tag
 
 bc. <txp:zem_contact_secret />
 
@@ -490,7 +490,7 @@ bc. <txp:zem_contact_secret label="Dear user">
     Please provide a useful example for this tag!
 </txp:zem_contact_secret>
 
-h3. zem_contact_serverinfo
+h3. zem_contact_serverinfo tag
 
 bc. <txp:zem_contact_serverinfo />
 
@@ -515,7 +515,7 @@ Add the name of the visitor's browser to the email:
 
 bc. <txp:zem_contact_serverinfo name="HTTP_USER_AGENT" label="Browser" />
 
-h3. zem_contact_send_article
+h3. zem_contact_send_article tag
 
 bc. <txp:zem_contact_send_article />
 
@@ -533,7 +533,7 @@ On an article form:
 
 bc. <txp:zem_contact_send_article linktext="Send this article" />
 
-h3. zem_contact_label
+h3. zem_contact_label tag
 
 bc. <txp:zem_contact_label />
 
@@ -543,7 +543,7 @@ h4. Attributes
 
 * @name="text"@<br />The name of the field for which you wish to retrieve the label.
 
-h3. zem_contact_value
+h3. zem_contact_value tag
 
 bc. <txp:zem_contact_value />
 
@@ -554,7 +554,7 @@ h4. Attributes
 * @label="text"@<br />The label of the field for which you wish to retrieve the value.
 * @name="text"@<br />The name of the field for which you wish to retrieve the value.
 
-h3. zem_contact_if
+h3. zem_contact_if tag
 
 bc. <txp:zem_contact_if />
 
