--- a/README.textile
+++ b/README.textile
@@ -54,9 +54,9 @@ Download the latest release of the plugin from "the GitHub project page":https:/
 
 To uninstall, delete from the Admin → Plugins panel.
 
-Alternatively, this plugin template can be installed using "Composer":http://getcomposer.org:
+Alternatively, this plugin can be installed using "Composer":https://getcomposer.org:
 
-bc. $ composer require bloke/zem_contact_reborn
+bc. $ composer require bloke/zem_contact_reborn:*
 
 h2(#differences). Differences from previous version
 
